--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  path_provider: ^1.1.0
+  permission_handler: ^3.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
