ajustes para rotacionar a imagem

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: editor_foto
+name: flutter_image_editor
 description: A new flutter plugin project.
 version: 0.0.3
 author: GabrielChaves <gabrielbum@gmail.com> ViniciusFiuza <vinicius.fiuza@outlook.com>
