--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,11 @@ flutter:
   # The androidPackage and pluginClass identifiers should not ordinarily
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
+
   plugin:
-    androidPackage: com.example.editor_foto
-    pluginClass: EditorFotoPlugin
+    androidPackage: com.example.flutter_image_editor
+    pluginClass: FlutterImageEditorPlugin
+
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
