--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: flutter_image_editor
 description: A plugin for flutter made to edit images. Change the brightness, contrast and rotate image.
-version: 2.0.0
+version: 2.1.0
 homepage: https://github.com/gabrielchaves7/flutterImageEditor
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
   flutter: ">=1.10.0"
 
 dependencies:
